# Ticking

./: .clang-format  .gitignore  Actions.h  CMakeLists.txt  CMakePresets.json  Enemy.cpp  Enemy.h  GameObject.h  Goblin.h  Monster.h  Player.h  README.md  Spawner.h  Window.h  World.h  config.h.in  main.cpp  old.Spawner2.h  old.main.binding_functions.cpp  old.main.member_callback.cpp  old.main2.cpp
